Bug 240584 - maemo kmail-mobile doesn't show folder names
Summary: maemo kmail-mobile doesn't show folder names
Status: RESOLVED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-03 12:58 UTC by Bjoern Ricks
Modified: 2011-02-18 10:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bjoern Ricks 2010-06-03 12:58:21 UTC
Version:           enterprise (using Devel) 
OS:                Linux

The folder view in kmail-mobile shows several folders from my kolab account but folder names are missing. It only displays the folder icons without any names beside.

Reproducible: Didn't try



Expected Results:  
Folder names should be available to select to correct folder.

Maemo package contains r1133710
Comment 1 Stephen Kelly 2010-06-08 18:17:22 UTC
SVN commit 1136001 by skelly:

Fetch collections so that monitor signals about changes will contain the full item.

BUG: 240584

 M  +1 -0      kdeclarativemainview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1136001
Comment 2 Sabine Faure 2010-08-13 22:47:01 UTC
Funny I cannot see any icon next to my Kolab folders but I can see their names so I think that part of the bug is fixed.

Should I report a different bug about the missing icons?

N900 Packages, Svn Rev 1162201