Fetch collections so that monitor signals about changes will contain the full item.

BUG: 240584

svn path=/branches/work/komo/kdepim/; revision=1136001